Fix vietnamese drinks translation font and attempt fix overflow on windows computers

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,7 @@ html {
     @include montserrat;
     height: 100%;
     background-color: $black;
+    overflow-y: hidden;
 
     li {
       list-style-type: none;
